2012-07-30  Sam Weinig  <sam@webkit.org>

        Rename WebKit2.h to WebKit2_C.h
        https://bugs.webkit.org/show_bug.cgi?id=92704

        Reviewed by Dan Bernstein.

        * MiniBrowser/mac/MiniBrowser_Prefix.pch:
        * MiniBrowser/win/BrowserView.h:
        * TestWebKitAPI/config.h:
        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        * WebKitTestRunner/WebKitTestRunnerPrefix.h:
        * WebKitTestRunner/config.h:
        Update for changed header file name.

2012-07-30  Dirk Pranke  <dpranke@chromium.org>

        chromium win compile broken after removing webkit.py
        https://bugs.webkit.org/show_bug.cgi?id=92549

        Reviewed by Ryosuke Niwa.

        Remove the stub file for webkit.py now that it's no longer
        necessary.

        * Scripts/webkitpy/layout_tests/port/webkit.py: Removed.

2012-07-30  Ryosuke Niwa  <rniwa@webkit.org>

        Windows build fix attempt after r124092.

        * MiniBrowser/win/BrowserView.cpp:
        (BrowserView::create):

2012-07-30  Ryosuke Niwa  <rniwa@webkit.org>

        Remove erroneously committed debugging print call from a test.

        * Scripts/webkitpy/performance_tests/perftestsrunner_unittest.py:
        (test_run_generates_results_page):

2012-07-30  Arnaud Renevier  <a.renevier@sisa.samsung.com>

        webkit-patch: system keyring is not used to read my password
        https://bugs.webkit.org/show_bug.cgi?id=92532

        Reviewed by Dirk Pranke.

        In case no username can be fetched from environment, git or keychain,
        prompt for username, and try to get password from keyring associated
        with that username.

        * Scripts/webkitpy/common/net/credentials.py:
        (Credentials.read_credentials):
        * Scripts/webkitpy/common/net/credentials_unittest.py:
        (test_keyring_without_git_repo_nor_keychain):